Tests written and running

--- a/templates/snack_list.html
+++ b/templates/snack_list.html
@@ -2,6 +2,6 @@
 
 {% block content %}
     {% for snack in object_list %}
-    <h2>{{snack.name}}</h2>
+    <h2><a href="{% url 'snack_details' snack.pk %}">{{snack.name}}</a></h2>
     {% endfor %}
 {% endblock content %}
